# swiftfetch

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
include/: colors.h  getAsciiLogo.h  getCpuInfos.h  getKernel.h  getLoadAvg.h  getMemUsage.h  getModelInfos.h  getOsName.h  getPkgNumber.h  getShellInfos.h  getStdoutFromShell.h  getTerminalInfos.h  getUptime.h  getUsernameAtHostname.h  main.h  printCols.h  printUnderline.h  testDebian.h
src/: getAsciiLogo.cpp  getCpuInfos.cpp  getKernel.cpp  getLoadAvg.cpp  getMemUsage.cpp  getModelInfos.cpp  getOsName.cpp  getPkgNumber.cpp  getShellInfos.cpp  getStdoutFromShell.cpp  getTerminalInfos.cpp  getUptime.cpp  getUsernameAtHostname.cpp  main.cpp  printCols.cpp  printUnderline.cpp  testDebian.cpp
